--- a/TODO
+++ b/TODO
@@ -1,18 +1,31 @@
 known bugs/issues:
-- kill threads: disable jobs which are not needed anymore  [bug]
+- the graphicsview is smaller than the area it visualizes?!
+- graphicsview vs view. one of these moves faster and so the view moves out of sight which is bad
+
+- opengl acceleration?
+- in qt4.5.x i get white borders in the rendering using the qgraphicsview, however they disappear if i 
+  move the view via mouse click and drag
+- kill threads: disable jobs which are not needed anymore
 - give job by reference not by value (object copy)
 - render the viewrect only. disable renderjobs outside it
 - increase importance of renderjobs inside the viewBox
-- remove all TODOs
 - switching from back/white to color sometimes leaves black/white tiles on the QGraphicsScene since jobs
   aren't canceled on change as well, so:
   - first cancel all pending jobs
   - next change the color
 
   // TODO make sceneWidth dynamic in boundaries
-- QTimeLine for smooth scrolling
 - remove prerender images from scene (right now they are just hidden)
-
+- implement mouse-wheel-zooming
 question:
  - can the frequency be changed without loosing current x/y position outside the center?
   - known as 'zoom issue': when zooming in the x coordinate is misplaced for some reason?!
+
+- only render tiles which: 
+  - are below the view
+  - are 1/width or 1/height out of the view
+- discard all scene items which are
+  - are 1/width or 1/height out of the view
+- discard preview tiles after high quality tile is finished
+
+- remove all TODOs
